force-app/main/default/objects/Player_Topic_Stat__c/Player_Topic_Stat__c.object-meta.xml
<CustomObject>
    <description>Per-user per-topic rollup (keyword, tag, entity, domain, difficulty) feeding mastery analytics, word clouds, and study-plan recommendations.</description>
    <label>Player Topic Stat</label>
    <nameField>
        <displayFormat>PTS-{0000}</displayFormat>
        <label>Player Topic Stat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Topic Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>