force-app/main/default/objects/Player_Topic_Stat__c/fields/Accuracy_Pct__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Pct__c</fullName>
    <description>Times_Correct / Times_Seen * 100. Used for &quot;weakest topics&quot; lists and study-plan generation.</description>
    <formula>IF(Times_Seen__c = 0, 0, (Times_Correct__c / Times_Seen__c) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accuracy %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>