force-app/main/default/objects/Player_Topic_Stat__c/fields/Last_Seen_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_At__c</fullName>
    <label>Last Seen At</label>
    <type>DateTime</type>
</CustomField>