force-app/main/default/objects/Player_Topic_Stat__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Topic Stats</relationshipLabel>
    <relationshipName>Topic_Stats</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>