force-app/main/default/objects/Player_Topic_Stat__c/fields/Times_Seen__c.field-meta.xml
<CustomField>
    <fullName>Times_Seen__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Times Seen</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>