force-app/main/default/objects/Player_Topic_Stat__c/fields/Topic_Key__c.field-meta.xml
<CustomField>
    <fullName>Topic_Key__c</fullName>
    <description>Composite external id: PlayerId|TopicType|lower(TopicValue). Enables upsert-by-external-id without a SOQL pre-read.</description>
    <externalId>true</externalId>
    <label>Topic Key</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>