force-app/main/default/objects/Player_Topic_Stat__c/fields/Topic_Type__c.field-meta.xml
<CustomField>
    <fullName>Topic_Type__c</fullName>
    <label>Topic Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keyword</fullName>
                <default>true</default>
                <label>Keyword</label>
            </value>
            <value>
                <fullName>Tag</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>Difficulty</fullName>
            </value>
            <value>
                <fullName>Misconception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>