force-app/main/default/objects/Player_Topic_Stat__c/fields/Topic_Value__c.field-meta.xml
<CustomField>
    <fullName>Topic_Value__c</fullName>
    <label>Topic Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>